# hypersnap

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
docs/: plan.md
hypersnap_cli/: __main__.py  checks.py
site/: index.html  package.json  styles.css
site/scripts/: validate-site.mjs
tests/: test_cli.py
