[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hypersnap"
version = "0.1.0"
description = "Operator CLI for installing and diagnosing Hypersnap / Snapchain nodes"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Cad from Arca", email = "cad@arcabot.ai"}]
keywords = ["hypersnap", "snapchain", "farcaster", "node-operator", "doctor"]
classifiers = [
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.scripts]
hypersnap = "hypersnap_cli.__main__:main"

[tool.setuptools]
packages = ["hypersnap_cli"]
